--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,10 +14,10 @@ management.endpoints.web.base-path=/monitor
 management.endpoints.web.exposure.include=*
 
 # Hystrix timeout value for get product redsky target api
-hystrix.command.ProductDetailCommand.execution.isolation.thread.timeoutInMilliseconds=6200
+hystrix.command.GetProductDetailCommand.execution.isolation.thread.timeoutInMilliseconds=6200
 
 # Hystrix Thread Pool size for get product redsky target api
-hystrix.threadpool.ProductDetailCommand.coreSize=10
+hystrix.threadpool.GetProductDetailCommand.coreSize=10
 
 # Hystrix timeout value for get product price mongodb request
 hystrix.command.GetProductPriceCommand.execution.isolation.thread.timeoutInMilliseconds=6200
